--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@
     text-align: center;
 }
 
-.fn-btn {
+.fn-btn, #eq-btn, #clr-btn {
     background-color: red;
     border-radius: 5px;
     font-size: 80px;
